Adicionei uma capa.

--- a/index.html
+++ b/index.html
@@ -27,11 +27,13 @@
 
         </div>
         <div id="res">
-             Digite o tamanho A, D ou G                
+             Digite A, D ou G                
         </div>  
     </section>
     <footer>
-        <p>&copy; Ellmagron</p>
+        <p id="pe">&copy; Ellmagron</p>
+        <p>&copy; Cover by: <a id="pe" href="https://twitter.com/gtunver/status/1091256482417369088?s=20&t=CPtk42bFjWy-sgvPk8HePQ" target="_blank" rel="external">@gtunver</a></p>
+
     </footer>
     <script src="script.js"></script>
 </body>
