--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1></h1>
     </header>
     <section>
-        <div>
+        <main>
             <p> Medida:
                 <input type="text" name="medida" id="medida">
                 <input type="button" value="Analisar" onclick="analisar()">
@@ -25,7 +25,7 @@
                 <label for="ass">Bunda</label>
             </p>
 
-        </div>
+        </main>
         <div id="res">
              Digite A, D ou G                
         </div>  
