--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="img/ass-medium.png" type="image/x-icon">
 </head>
+
 <body>
     <header>
         <h1></h1>
@@ -16,25 +18,28 @@
         <main>
             <p> Medida:
                 <input type="text" name="medida" id="medida">
-                <input type="button" value="Analisar" onclick="analisar()">
+                <input type="button" value="Analisar" class="btn_service">
             </p>
             <p> Preferência:
-                <input type="radio" name="fan" id="bob"checked>
+                <input type="radio" name="fan" class="radio" value="bob" id="bob">
                 <label for="bob">Seio</label>
-                <input type="radio" name="fan" id="ass">
+                <input type="radio" name="fan" class="radio" value="ass" id="ass">
                 <label for="ass">Bunda</label>
             </p>
 
         </main>
         <div id="res">
-             Digite A, D ou G                
-        </div>  
+            Digite: Small, Medium ou Huge
+        </div>
     </section>
     <footer>
         <p id="pe">&copy; Ellmagron</p>
-        <p>&copy; Cover by: <a id="pe" href="https://twitter.com/gtunver/status/1091256482417369088?s=20&t=CPtk42bFjWy-sgvPk8HePQ" target="_blank" rel="external">@gtunver</a></p>
+        <p>&copy; Cover by: <a id="pe"
+                href="https://twitter.com/gtunver/status/1091256482417369088?s=20&t=CPtk42bFjWy-sgvPk8HePQ"
+                target="_blank" rel="external">@gtunver</a></p>
 
     </footer>
     <script src="script.js"></script>
 </body>
+
 </html>
